fix search alert notification not showing

--- a/resources/assets/sass/pages/_objects.scss
+++ b/resources/assets/sass/pages/_objects.scss
@@ -46,7 +46,7 @@
 }
 
 .notification {
-  height: 40px;
+  min-height:40px;
   background-color: $site-red;
 
   span {
@@ -237,7 +237,6 @@
   background-color: #262626;
   text-align: center;
   padding: 10px;
-
   ul {
     margin: 0;
     display: inline-block;
@@ -246,7 +245,7 @@
     li {
       margin: 0 5px;
 
-      @media (max-width: 100px) {
+      @media (max-width: 767) {
         display: inline-block;
       }
 
